feat: guess count and answer hint
+ Add Guess Count Message (Toast)
+ Remove Answer from Hint
+ Add Answer Hint Text (Bottom-Right)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="guessNumberInput">Guess the Number</string>
     <string name="scoreLabel">Score</string>
     <string name="scoreValue">TextView</string>
+    <string name="answerHint">TextView</string>
 </resources>
